# Black-Terminal

./: .gitignore  Black-Terminal.code-workspace
black-terminal-identical-frontend/: .dockerignore  .editorconfig  .env.black-cloud.example  .env.bybit-mainnet.example  .gitignore  BLACK_TERMINAL_2.0_VISION_FOR_CODEX.txt  Dockerfile.black-cloud  Dockerfile.book-heatmap-worker  README.md  index.html  more features.txt  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
black-terminal-identical-frontend/api/: claude.js  send-email.js
black-terminal-identical-frontend/docs/: AIF_AUCTION_EVENT_TIMELINE.md  AIF_BENCHMARKS.md  AIF_CHOB_STATE_ENGINE.md  AIF_DATA_QUALITY_PROVENANCE.md  AIF_PROFILE_TYPES.md  ARCHITECTURE.md  BLACK_CORE_PHASE2.md  BOOK_HEATMAP_ARCHITECTURE.md  BOOK_HEATMAP_IMPLEMENTATION_HISTORY.md  BROKER_CONNECTION_ARCHITECTURE.md  BYBIT_CANONICAL_ORDER_IDENTITY.md  BYBIT_CONNECTION_LIFECYCLE_HOTFIX.md  BYBIT_EXTERNAL_ORDER_CERTIFICATION_REPORT.md  BYBIT_EXTERNAL_ORDER_RECONCILIATION.md  BYBIT_MAINNET_CERTIFICATION_REPORT.md  BYBIT_MAINNET_ENVIRONMENT_SETUP.md  BYBIT_ORDER_DEDUPLICATION_HOTFIX.md  BYBIT_ORDER_PRICE_ALIGNMENT.md  BYBIT_ORDER_SYNC_ARCHITECTURE.md  CHART_ORDER_MANAGEMENT_MENU.md  DOM_PRO_AGGREGATED_LADDER_SYNC.md  DOM_PRO_COMPACT_EXECUTION_PANEL.md  DOM_PRO_FINAL_COSMETIC_FIXES.md  DOM_PRO_FINAL_PERFORMANCE_BASELINE.md  (+62 more)
black-terminal-identical-frontend/src-tauri/: Cargo.toml  tauri.conf.json
black-terminal-identical-frontend/src-tauri/capabilities/: default.json
black-terminal-identical-frontend/src-tauri/src/: lib.rs  main.rs  network_security.rs
(+482 files in other folders)
