[package]
name = "black-terminal-pixi"
version = "0.2.0"
description = "Black-Terminal: PixiJS GPU-rendered quant crypto trading terminal"
authors = ["Black Triangle Group"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "black_terminal_pixi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
